tests/neg/i14432c.check
-- Error: tests/neg/i14432c.scala:12:18 --------------------------------------------------------------------------------
12 |class Bar extends example.Foo(23) { // error // error: cant access private[example] ctor
   |                  ^^^^^^^^^^^
   |                  constructor Foo cannot be accessed as a member of example.Foo from class Bar.
-- Error: tests/neg/i14432c.scala:12:6 ---------------------------------------------------------------------------------
12 |class Bar extends example.Foo(23) { // error // error: cant access private[example] ctor
   |      ^
   |      constructor Foo cannot be accessed as a member of example.Foo from class Bar.
-- Error: tests/neg/i14432c.scala:16:43 --------------------------------------------------------------------------------
16 |  val mFoo = summon[Mirror.Of[example.Foo]] // error: no mirror
   |                                           ^
   |No given instance of type deriving.Mirror.Of[example.Foo] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[example.Foo]: Constructor of class Foo is unnaccessible from the calling scope.
